--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -79,7 +79,7 @@
 @media screen and (min-width: 1999px) {
   .about-background {
     background-color: rgb(0, 0, 0);
-    height: 1062px;
+    height: 1330px;
     background-image: linear-gradient(
         250deg,
         rgba(19, 19, 19),
@@ -90,7 +90,9 @@
       ),
       url("https://res.cloudinary.com/garagesellers/image/upload/v1635657504/pexels-pixabay-270360_wpjlmd.jpg");
     h1 {
+      width: 1000px;
       font-size: 35px;
+      padding: 310px 100px 0 100px;
       span {
         font-size: 40px;
       }
