--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,9 +1,15 @@
 @import "../scss/utils";
 @import "../scss/config";
 
+#header-container {
+  position: absolute;
+  width: 100%;
+}
+
 .about-background {
+  border-top: 7px solid #04ff3a;
   background-color: rgb(0, 0, 0);
-  height: 777px;
+  height: 100vh;
   background-image: linear-gradient(
       290deg,
       rgba(19, 19, 19),
@@ -30,65 +36,10 @@
   }
 }
 
-.logo-container {
-  display: flex;
-  padding-top: 100px;
-  justify-content: space-around;
-  width: 1200px;
-  margin: auto;
-}
-.logo-size-1 {
-  width: 75px;
-  transition: 0.2s;
-
-  &:hover {
-    width: 115px;
-  }
-}
-
-.logo-size-2 {
-  width: 118px;
-  transition: 0.2s;
-
-  &:hover {
-    width: 158px;
-  }
-}
-.logo-size-3 {
-  width: 140px;
-  padding-bottom: 38px;
-  transition: 0.2s;
-
-  &:hover {
-    width: 180px;
-  }
-}
-.logo-size-4 {
-  width: 108px;
-  transition: 0.2s;
-
-  &:hover {
-    width: 158px;
-  }
-}
-.logo-correction-1 {
-  position: relative;
-  bottom: 10px;
-}
 ///1440p standard size monitor
 @media screen and (min-width: 1999px) {
   .about-background {
     background-color: rgb(0, 0, 0);
-    height: 1330px;
-    background-image: linear-gradient(
-        250deg,
-        rgba(19, 19, 19),
-        rgba(19, 19, 19, 1),
-        rgba(19, 19, 19, 0.95),
-        rgba(19, 19, 19, 0.9),
-        rgba(0, 0, 0, 0.44)
-      ),
-      url("https://res.cloudinary.com/garagesellers/image/upload/v1635657504/pexels-pixabay-270360_wpjlmd.jpg");
     h1 {
       width: 1000px;
       font-size: 35px;
@@ -97,43 +48,5 @@
         font-size: 40px;
       }
     }
-  }
-  .logo-container {
-    display: flex;
-    padding-top: 100px;
-    justify-content: space-around;
-    width: 1900px;
-  }
-
-  .logo-size-1 {
-    width: 130px;
-    &:hover {
-      width: 170px;
-    }
-  }
-  .logo-size-2 {
-    width: 178px;
-    &:hover {
-      width: 208px;
-    }
-  }
-  .logo-size-3 {
-    width: 200px;
-    padding-bottom: 38px;
-    &:hover {
-      width: 230px;
-    }
-  }
-  .logo-size-4 {
-    width: 187px;
-    transition: 0.2s;
-
-    &:hover {
-      width: 217px;
-    }
-  }
-  .logo-correction-1 {
-    position: relative;
-    bottom: 10px;
   }
 }
