--- a/src/components/nav/NavBar.scss
+++ b/src/components/nav/NavBar.scss
@@ -1,9 +1,25 @@
 #nav-background {
-  height: 120px;
-  background-color: #000000;
+  height: 80px;
+  background: #1f1f1f00;
+  display: flex;
+  justify-content: space-between;
+}
+#logo {
+  font-family: "Rowdies", cursive;
+  color: rgb(72, 255, 0);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 70px;
+  margin-left: 160px;
+  cursor: pointer;
+}
+#idk {
+  position: absolute;
+  width: 100%;
 }
 .nav-links {
-  margin: 30px 90px 0px 0px;
+  margin: 5px 5% 0px 0px;
+  width: 45%;
   height: 100px;
   display: flex;
   justify-content: space-around;
@@ -13,17 +29,26 @@
   h1 {
     margin-top: 10px;
     font-family: monospace;
-    color: white;
-    font-size: 40px;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
     transition: 0.2s;
     position: absolute;
     cursor: pointer;
   }
-  h1:hover {
-    color: rgb(37, 200, 59);
+  h1::after {
+    content: "";
+    width: 0px;
+    height: 3px;
+    display: block;
+    background: rgb(72, 255, 0);
+    transition: 300ms;
+  }
+
+  h1:hover::after {
+    width: 100%;
   }
   h1:active {
-    font-size: 38px;
+    font-size: 18px;
   }
 }
 
@@ -35,10 +60,10 @@
 
   .nav-link {
     h1 {
-      margin-top: 0px;
+      margin-top: 10px;
       font-family: monospace;
       color: rgb(255, 255, 255);
-      font-size: 35px;
+      font-size: 25px;
       transition: 0.2s;
     }
     h1:active {
